# Weight-app

./: .gitignore  CMakeLists.txt  README.md  weight.cpp
src/: weight.cpp  weight.h
