# CMakeList.txt : CMake project for tstproject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("weight")

# Add source to this project's executable.
add_executable (tstproject "src/weight.cpp" "src/weight.h")

# TODO: Add tests and install targets if needed.
